重构部分代码